# ntangler

./: .gitignore  ABOUT.md  CHANGELOG-v0.1.1-alpha.1.md  CHANGELOG-v0.1.2-alpha.1.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT.md  README.md
.chglog/: CHANGELOG.tpl.md  config.yml
.github/workflows/: changelog.yml  release-next.yml  release.yml
entanglement_server/lib/: Cargo.toml
entanglement_server/lib/src/: lib.rs
entanglement_server/server/: Cargo.toml
ntangler/: Cargo.toml
ntangler/src/: actors.rs  main.rs  messages.rs
ntangler/src/actors/: generators.rs  ntangler.rs  repositories.rs
ntangler/src/messages/: commit_event.rs  diff_queued.rs  file_change_detected.rs
ntangler/src/models/: commit_type.rs  config.rs  description.rs  ntangled_repository.rs  oid.rs
ntangler/src/models/config/: repository_config.rs
ntangler/src/models/ui/: styles.rs
ntangler/src/models/ui/terminal/: app_event.rs  filename.rs  repository.rs
src/: actors.rs  commits.rs  config.toml  config_file.rs  ginja_config.rs  main.rs  messages.rs  models.rs  repository_config.rs  tangler_config.rs
src/actors/: ai_actor.rs  broker.rs  broker_actor.rs  brokers.rs  generators.rs  ginja_actor.rs  git_repository.rs  llmclient.rs  ntangler.rs  repositories.rs  repository.rs  repository_actor.rs  repository_watcher_actor.rs  sentinel.rs  sentinels.rs  tangler.rs  tangler_actor.rs
src/messages/: accept_parent_broker.rs  broker_emit.rs  broker_subscribe.rs  broker_unsubscribe.rs  checkout_branch.rs  commit_response.rs  commit_success.rs  diff.rs  diff_calculated.rs  error_notification.rs  finalized_commit.rs  load_repo.rs  notify_change.rs  observe.rs  poll.rs  response_commit.rs  submit_diff.rs  system_started.rs  unsubscribe_broker.rs  watch.rs
src/models/: commit.rs  description.rs  footer.rs  ntangled_repository.rs  oid.rs  scope.rs  semver_impact.rs  time_stamp.rs  traits.rs
src/models/config/: ntangler_config.rs
src/models/ui/: styles.rs  traits.rs
src/models/ui/terminal/: commit_heading.rs  commit_type.rs  description.rs  dim.rs  repository.rs  scope.rs  time_stamp.rs
tangler/: Cargo.toml
tangler/src/: actors.rs  main.rs  messages.rs  models.rs
tangler/src/actors/: brokers.rs  generators.rs  repositories.rs  scribe.rs  tangler.rs
tangler/src/messages/: accept_broker.rs  commit_authoring.rs  commit_event.rs  commit_finalized.rs  commit_message_generated.rs  commit_pending.rs  commit_posted.rs  commit_response.rs  diff_calculated.rs  diff_queued.rs  file_change_detected.rs  finalized_commit.rs  generation_started.rs  git_repository_event.rs  notify_change.rs  notify_error.rs  poll_changes.rs  subscribe_broker.rs  unsubscribe_broker.rs
tangler/src/models/: commit.rs  commit_message.rs  commit_step.rs  commit_type.rs  committed_commit.rs  config.rs  description.rs  diff_generated_commit.rs  file_name.rs  footer.rs  oid.rs  pending_commit.rs  scope.rs  semver_impact.rs  signature.rs  tangled_commit.rs  tangled_repository.rs  time_stamp.rs  traits.rs  ui.rs
tangler/src/models/config/: repository_config.rs  tangler_config.rs
tangler/src/models/ui/: styles.rs  terminal.rs  traits.rs  ui_strings.rs
tangler/src/models/ui/terminal/: app_event.rs  commit_heading.rs  commit_message_generated_commit.rs  commit_type.rs  description.rs  dim.rs  filename.rs  generating_commit.rs  is_breaking.rs  oid.rs  repository.rs  scope.rs  semver_impact.rs  status.rs  time_stamp.rs
