[package]
name = "tangler"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "tangler"
path = "src/main.rs"

[dependencies]
notify = { version = "6.1.1", features = ["serde", "crossbeam-channel"] }
git2 = "0.18.3"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
#tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.13"
tokio-macros = "2.3.0"
anyhow = "1.0.86"
akton = { git = "ssh://git@github.com/GovCraft/akton-framework.git", akton = "quasar", branch = "main" }
dashmap = "5.5.3"
sha2 = "0.11.0-pre.3"
hex = "0.4.3"
notify-debouncer-mini = { version = "0.4.1", features = ["serde"] }
ignore = "0.4.22"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
config = "0.14.0"
async-openai = "0.23.1"
futures = "0.3.30"
pretty_assertions = "1.4.0"
tokio-retry = "0.3.0"
crossbeam-epoch = "0.9.18"
rand = "0.8.5"
serde_json = "1.0.117"
time = "0.3.36"

[dev-dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"


