[package]
name = "ntangler"
version = "3.5.2"
edition = "2021"

[[bin]]
name = "ntangler"
path = "src/main.rs"

[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]

[features]
demo = []

[dependencies]
git2 = "0.19.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.13"
tokio-macros = "2.3.0"
anyhow = "1.0.86"
akton = { git = "https://git@github.com/GovCraft/akton-framework.git", akton = "quasar", branch = "main" }
dashmap = "5.5.3"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
async-openai = "0.23.2"
futures = "0.3.30"
rand = "0.8.5"
serde_json = "1.0.117"
time = "0.3.36"
chrono = "0.4.38"
unicode-width = "0.1.13"
console = { version = "0.15.8", features = ["windows-console-colors"] }
regex = "1.10.5"
lazy_static = "1.4.0"
owo-colors = "4.0.0"
derive_more = "0.99.18"
derive-new = "0.6.0"
uuid = { version = "1.9.1", features = ["v3"] }
tracing-appender = "0.2.3"
failsafe = "1.2.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
lazy_static = "1.4.0"
rand = "0.8.5"
tracing-test = "0.2.5"


