[package]
name = "ntangler"
version = "3.0.0"
edition = "2021"

[[bin]]
name = "ntangler"
path = "src/main.rs"

[features]
demo = []

[dependencies]
notify = { version = "6.1.1", features = ["serde", "crossbeam-channel"] }
git2 = "0.19.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.13"
tokio-macros = "2.3.0"
anyhow = "1.0.86"
akton = { git = "ssh://git@github.com/GovCraft/akton-framework.git", akton = "quasar", branch = "main" }
dashmap = "5.5.3"
sha2 = "0.11.0-pre.3"
hex = "0.4.3"
notify-debouncer-mini = { version = "0.4.1", features = ["serde"] }
ignore = "0.4.22"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
config = "0.14.0"
async-openai = "0.23.2"
futures = "0.3.30"
pretty_assertions = "1.4.0"
tokio-retry = "0.3.0"
crossbeam-epoch = "0.9.18"
rand = "0.8.5"
serde_json = "1.0.117"
time = "0.3.36"
chrono = "0.4.38"
unicode-width = "0.1.13"
unicode-segmentation = "1.8"
console = { version = "0.15.8", features = ["windows-console-colors"] }
regex = "1.10.5"
termcolor = "1.4.1"
atty = "0.2.14"
lazy_static = "1.4.0"
owo-colors = "4.0.0"
vaultrs = "0.7.2"
dotenv = { version = "0.15.0", features = ["clap"] }
indicatif = { version = "0.17.8", features = ["futures", "tokio", "in_memory"] }
derive_more = "0.99.18"
derive-new = "0.6.0"
uuid = { version = "1.9.1", features = ["v3"] }
tracing-appender = "0.2.3"

[dev-dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
tracing-test = "0.2.5"


